--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 
-.yarn/cache
-.yarn/install-state.gz
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 .pnp.cjs
