chore(lint): husky n lint

--- a/services/order-book/package.json
+++ b/services/order-book/package.json
@@ -2,11 +2,12 @@
     "name": "order-book",
     "scripts": {
         "build": "tsc -p tsconfig.json",
-        "start": "node ./dist/server.js"
+        "serve": "node ./dist/server.js",
+        "dev": "tsc-watch --onSuccess \"yarn serve\""
     },
     "dependencies": {
         "fastify": "^4.5.2",
-        "nodemon": "^2.0.19"
+        "tsc-watch": "^5.0.3"
     },
     "devDependencies": {
         "@tsconfig/node14": "^1.0.3",
