--- a/package.json
+++ b/package.json
@@ -3,5 +3,22 @@
   "workspaces": [
     "services/**"
   ],
-  "packageManager": "yarn@3.2.2"
+  "scripts": {
+    "lint": "eslint ."
+  },
+  "packageManager": "yarn@3.2.2",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-recommended": "^4.1.0",
+    "eslint-config-standard-with-typescript": "latest",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "typescript": "*"
+  }
 }
