--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "services/**"
   ],
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint . --max-warnings=0"
   },
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
