--- a/services/order-book/package.json
+++ b/services/order-book/package.json
@@ -3,15 +3,21 @@
     "scripts": {
         "build": "tsc -p tsconfig.json",
         "serve": "node ./dist/server.js",
-        "dev": "tsc-watch --onSuccess \"yarn serve\""
+        "dev": "tsc-watch --onSuccess \"yarn serve\"",
+        "test": "jest ./__tests__"
     },
     "dependencies": {
         "fastify": "^4.5.2",
         "tsc-watch": "^5.0.3"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-typescript": "^7.18.6",
         "@tsconfig/node14": "^1.0.3",
+        "@types/jest": "^28.1.8",
         "@types/node": "^18.7.8",
+        "jest": "^29.0.1",
+        "ts-jest": "^28.0.8",
         "typescript": "^4.7.4"
     }
 }
