refactor(matching-engine): renamed from order book and reduced scope

--- a/services/matching-engine/package.json
+++ b/services/matching-engine/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "order-book",
+    "name": "matching-engine",
     "scripts": {
         "build": "tsc -p tsconfig.json",
         "serve": "node ./dist/server.js",
