--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,7 @@
         ]
     },
     "ignorePatterns": [
-        "**/dist/",
-        "**/__tests__/"
+        "**/dist/"
     ],
     "plugins": [
         "prettier",
