--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,13 @@
     ],
     "overrides": [],
     "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": [
-            "**/tsconfig.json"
-        ]
-    },
+    // "parserOptions": {
+    //     "ecmaVersion": "latest",
+    //     "sourceType": "module",
+    //     "project": [
+    //         "**/tsconfig.json"
+    //     ]
+    // },
     "ignorePatterns": [
         "**/dist/"
     ],
