--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boral-clocks",
   "workspaces": [
+    "core",
     "services/**"
   ],
   "scripts": {
@@ -10,6 +11,7 @@
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-recommended": "^4.1.0",
